--- a/movieapp-Simple.properties
+++ b/movieapp-Simple.properties
@@ -8,8 +8,11 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 server.port=8081
-########## URL Configuration ###############
-userApp.url = http://localhost:8080/user_app/v1/users/{id}
+######### URL Configurations ###############
+#User App
+userApp.url = http://USER-SERVICE/user_app/v1/users/{id}
 
-########## URL Configuration ###############
-theatreApp.url = http://localhost:8082/theatre_app/v1/theatres/{theatreId}/movie/{movieId}
+######### URL Configurations ###############
+#Theatre App
+theatreApp.address = http://THEATRE-SERVICE
+theatreApp.bookMoviePath = /theatre_app/v1/theatres/{theatreId}/movie/{movieId}
