--- a/movieapp-Simple.properties
+++ b/movieapp-Simple.properties
@@ -10,8 +10,7 @@ spring.jpa.hibernate.ddl-auto=create
 server.port=8081
 ######### URL Configurations ###############
 #User App
-userApp.address = http://USER-SERVICE
-userApp.url = /user_app/v1/users/{id}
+userApp.url = http://USER-SERVICE/user_app/v1/users/{id}
 
 ######### URL Configurations ###############
 #Theatre App
